# harmonicbalance

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: example_duffing.py  example_ode.py  example_pendulum.py  example_predictorcorrector.py  example_stickslip.py  example_vanderpol.py  example_volterralotka.py  example_volterralotka_onion.py
harmonicbalance/: __init__.py  fourier.py  predictorcorrector.py  solvers.py
